@@ -9,6 +9,8 @@ Version 0.4.0
 (release date to be announced)
 
 - ``dooku.datetime.Local.tzname`` now returns a timezone name.
+- Add ``dooku.conf.Conf.from_file`` method to load settings from
+  a custom file format.
 
 
 Version 0.3.0
